"$Id$"
Top of CVS tree:
------------------------------------------------------------------------------

x11/x11.c: Fix similar problem for x11 client: need_update needs to be cleared
    too.
Andreas Kirschbaum 2005-09-04

gtk/map.c: need_resmooth needs to be cleared too, else drawing routines called
 all the time.
common/misc.c: LOG buffer made static to avoid stack creation/destruction.
common/script.c: removed unused variable/call.
gtk/gx11.c: no need to refresh game area when window gets focus.
gtk/gx11.h: add cache fields for listinfo.
gtk/inventory.c: don't refresh list labels if not changed.
Ryo 2005-09-04

*Makefile.in, aclocal.m4, configure: Rebuilt.
Andreas Kirschbaum 2005-09-03

Fix bug #1102991 (Duplicate grapical display of the same monster):
common/Makefile.am: Add new files mapdata.c and mapdata.h.
common/{client.c, commands.c}: Tell mapdata module the current display size.
common/commands.c: Remove functions to handle map updates. Rewrite
   map1_common() to pass information into mapdata module.
common/init.c, gtk/gx11.c: Add new config options -mapscroll and -nomapscroll
   to enable/disable scrolling the map view with bitmap operations.
common/mapdata.[ch]: Add new module to handle all updates to the_map.
gtk/gx11.c: Remove code for #if ALTERNATE_MAP_REDRAW. Initialize question mark
   face for fog of war. Remove code to allocate the_map.
gtk/image.c: Do not clear the_map in reset_image_data() anymore.
gtk/map.c: Move code to update map data into mapdata module.
   draw_pixmap(): New function to draw one face.
   drawsmooth(): Check correct layer instead of fixed layer zero. Fix out of
      bounds array access.
   display_mapcell(): New function to draw one cell.
   gtk_draw_map(): Move map drawing code into display_mapcell().
gtk/sdl.c: Basically the same changes as in gtk/map.c
gtk-v2/src/image.c: Basically the same changes as in gtk/gx11.c.
gtk-v2/src/main.c: Add config options -smooth/-nosmooth to enable/disable